--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
    <section>
       <div class="img"><a href="sourc/index.html"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
-      <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
+      <div class="img"><a href="sourc/index1.html"><img src="second.png" alt=""></a></div>
       <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
       <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
       <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
