--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>Developer Jeet</title>
    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="utility.css">
 </head>
 
 <body>
@@ -17,19 +18,24 @@
          </div>
 
          <ul>
-            <li><a href="#" id="home-link">home</a></li>
-            <li><a href="#" id="about-link">about</a></li>
-            <li><a href="#" id="source-link">source code</a></li>
-            <li><a href="#" id="portfolio-link">portfolio</a></li>
-            <li><a href="#" id="contact-link">contact</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">source code</a></li>
+            <li><a href="#">portfolio</a></li>
+            <li><a href="#">contact</a></li>
+            <div class="close"><i class="ri-close-circle-fill"></i></div>
          </ul>
+
+         <div class="menu">
+            <i class="ri-menu-3-line"></i>
+         </div>
       </nav>
    </header>
 
    <section>
       <div class="img"><a href="sourc/index.html"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
       <div class="img"><a href="sourc/index1.html"><img src="second.png" alt=""></a></div>
-      <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
+      <div class="img"><a href="sourc/index2.html"><img src="dark.png" alt=""></a></div>
       <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
       <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
       <div class="img"><a href="#"><img src="Animated Hamburger Menu (1).png" alt=""></a></div>
@@ -98,6 +104,8 @@
 
       link();
    </script>
+
+   <script src="script.js"></script>
 </body>
 
 </html>
